--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 header {
@@ -9,6 +10,7 @@ header {
 }
 
 img {
+  margin: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
