--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ figcaption {
   padding: 4px;
 }
 
-#featured-property {
+#featured-property p {
   width: 800px;
   margin: auto;
   text-align: center;
